--- a/github/modules/SearchResult/view/cell/RepositoryCell.xib
+++ b/github/modules/SearchResult/view/cell/RepositoryCell.xib
@@ -12,28 +12,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="152" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="github" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="152"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="197" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="github" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="197"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="286" height="151.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="286" height="196.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="f4v-Ih-nEx">
-                        <rect key="frame" x="20" y="20" width="266" height="111.5"/>
+                        <rect key="frame" x="20" y="20" width="266" height="156.5"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jgk-Ef-f7c">
-                                <rect key="frame" x="0.0" y="0.0" width="266" height="36"/>
+                                <rect key="frame" x="0.0" y="0.0" width="266" height="39.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SbG-Lc-hnQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
+                                        <rect key="frame" x="0.0" y="2" width="36" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="SbG-Lc-hnQ" secondAttribute="height" multiplier="1:1" id="6GQ-Vy-0sk"/>
                                             <constraint firstAttribute="height" constant="36" id="iuU-9j-YN0"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="RepositoryName" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7s-D5-mJ5">
-                                        <rect key="frame" x="52" y="3.5" width="214" height="29"/>
+                                        <rect key="frame" x="52" y="5.5" width="214" height="29"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -41,16 +41,16 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8Y-nc-dyQ">
-                                <rect key="frame" x="0.0" y="52" width="266" height="19.5"/>
+                                <rect key="frame" x="0.0" y="55.5" width="266" height="21.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" restorationIdentifier="bottom stack view" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GHe-7l-GrX">
-                                <rect key="frame" x="0.0" y="87.5" width="266" height="24"/>
+                                <rect key="frame" x="0.0" y="93" width="266" height="26.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" restorationIdentifier="star stack view" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="t3B-aJ-wvD">
-                                        <rect key="frame" x="0.0" y="0.0" width="129" height="24"/>
+                                        <rect key="frame" x="0.0" y="1.5" width="129" height="24"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="star image" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="jCb-ok-4WZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
@@ -68,8 +68,25 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="language label" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcv-XW-CR7">
-                                        <rect key="frame" x="137" y="2.5" width="129" height="19.5"/>
+                                        <rect key="frame" x="137" y="3.5" width="129" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OCE-2C-ByW">
+                                <rect key="frame" x="0.0" y="135.5" width="266" height="21"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Updated at " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2oC-s0-Tuz">
+                                        <rect key="frame" x="0.0" y="0.0" width="66.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="yyyy/MM/dd hh:mm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-V1-AJj">
+                                        <rect key="frame" x="66.5" y="0.0" width="199.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -92,8 +109,9 @@
                 <outlet property="ownerImageView" destination="SbG-Lc-hnQ" id="R5t-xB-Ujn"/>
                 <outlet property="repositoryNameLabel" destination="x7s-D5-mJ5" id="xzt-LP-61A"/>
                 <outlet property="starCountLabel" destination="N1Z-xM-PN9" id="YM6-Mt-D9P"/>
+                <outlet property="updatedDateLabel" destination="fey-V1-AJj" id="wki-pl-pVQ"/>
             </connections>
-            <point key="canvasLocation" x="116.8" y="108.84557721139431"/>
+            <point key="canvasLocation" x="116.8" y="129.08545727136433"/>
         </tableViewCell>
     </objects>
     <resources>
